--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style_h.css" />
+    <link rel="stylesheet" href="./style_h.css" />
     <link rel="icon" type="image/x-icon" href="./Logo.png">
   </head>
   <body>
@@ -22,8 +22,8 @@
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
         <li class="logo">Alankaar</li>
-        <li><a href="/Alankar-Web/Admin page/index_a.html">Admin</a></li>
-        <li><a href="/Alankar-Web/Volunteer page/index_v.html">Volunteer</a></li>
+        <li><a href="./Admin page/index_a.html">Admin</a></li>
+        <li><a href="./Volunteer page/index_v.html">Volunteer</a></li>
       </ul>
     </div>
     <!-- <div class="banner" id="home">
@@ -37,8 +37,8 @@
       <div class="dropdown">
         <button onclick="myFunction()" class="dropbtn">Signup</button>
         <div id="myDropdown" class="dropdown-content">
-          <a href="/Alankar-Web/Student Registration form/index.html">Student</a>
-          <a href="/Alankar-Web/Onboarding volunteer page/index.html">Volunteer</a>
+          <a href="./Student Registration form/index.html">Student</a>
+          <a href="./Onboarding volunteer page/index.html">Volunteer</a>
         </div>
       </div>
     </div>
@@ -61,7 +61,7 @@
       </div>
       <div class="about-content">
         <div class="single-about">
-          <img src="img/2.jpg" alt="" />
+          <img src="./img/2.jpg" alt="" />
           <div class="about-text">
             <h2>More Text</h2>
             <p>
@@ -85,7 +85,7 @@
       </div>
       <div class="service-content">
         <div class="single-service">
-          <img src="img/3.jpg" alt="" />
+          <img src="./img/3.jpg" alt="" />
           <h2>More Text</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod,
@@ -93,7 +93,7 @@
           </p>
         </div>
         <div class="single-service">
-          <img src="img/4.jpg" alt="" />
+          <img src="./img/4.jpg" alt="" />
           <h2>More Text</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod,
@@ -101,7 +101,7 @@
           </p>
         </div>
         <div class="single-service">
-          <img src="img/5.jpg" alt="" />
+          <img src="./img/5.jpg" alt="" />
           <h2>More Text</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod,
