--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Alank</title>
+    <title>Alanka</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;900&display=swap"
       rel="stylesheet"
@@ -13,8 +13,8 @@
       href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./style_h.css" />
-    <link rel="icon" type="image/x-icon" href="./Logo.png">
+    <link rel="stylesheet" href="style_h.css" />
+    <link rel="icon" type="image/x-icon" href="Logo.png">
   </head>
   <body>
     <div class="header">
