--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style_h.css" />
-    <link rel="icon" type="image/x-icon" href="Logo.png">
+    <link rel="stylesheet" href="./style_h.css" />
+    <link rel="icon" type="image/x-icon" href="./Logo.png">
   </head>
   <body>
     <div class="header">
@@ -28,7 +28,7 @@
     </div>
     <!-- <div class="banner" id="home">
       <div class="banner-text">
-        <a href="/Alankar-Web/Onboarding volunteer page/index.html">Signup</a>
+        <a href="./Onboarding volunteer page/index.html">Signup</a>
       </div>
     </div> -->
 
@@ -46,8 +46,8 @@
     <!-- <div class="dropdown">
       <button onclick="myFunction()" class="dropbtn">Signup</button>
       <div id="myDropdown" class="dropdown-content">
-        <a href="/Alankar-Web/Student Registration form/index.html">Student</a>
-        <a href="/Alankar-Web/Onboarding volunteer page/index.html">Volunteer</a>
+        <a href="./Student Registration form/index.html">Student</a>
+        <a href="./Onboarding volunteer page/index.html">Volunteer</a>
       </div>
     </div> -->
 
@@ -61,7 +61,7 @@
       </div>
       <div class="about-content">
         <div class="single-about">
-          <img src="./img/2.jpg" alt="" />
+          <img src="img/2.jpg" alt="" />
           <div class="about-text">
             <h2>More Text</h2>
             <p>
@@ -85,7 +85,7 @@
       </div>
       <div class="service-content">
         <div class="single-service">
-          <img src="./img/3.jpg" alt="" />
+          <img src="img/3.jpg" alt="" />
           <h2>More Text</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod,
@@ -93,7 +93,7 @@
           </p>
         </div>
         <div class="single-service">
-          <img src="./img/4.jpg" alt="" />
+          <img src="img/4.jpg" alt="" />
           <h2>More Text</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod,
@@ -101,7 +101,7 @@
           </p>
         </div>
         <div class="single-service">
-          <img src="./img/5.jpg" alt="" />
+          <img src="img/5.jpg" alt="" />
           <h2>More Text</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod,
